# MMECO

./: .gitignore  LEITURA_PROJETO.txt  PROJECT_ANALYSIS_REPORT.md  README.md  UPDATES.md  bridge-state.json  check_build_result.sh  contexto_full.txt  keep-alive-python.stats.json  keep-alive.sh  limpar_disco.sh  md_files.txt  projeto_contexto.txt  sync-data-20260321-124818.json  sync-data-20260321-125443.json  sync-report-20260321-125443.md  unified-agent-report-20260321-124818.json  unified-agent-report-20260321-125443.json
.github/workflows/: build-and-track.yml  build.yml  dock.yml  docker.yml  jekyll-docker.yml  rust.yml
.github/workflows/.github/workflows/: f.yml  final.yml
DOCS_SISTEMA/: CONSTITUICAO_MORAL_MONEY.md  MANUAL_BUILDCOIN.md  REDE_P2P_OFFLINE.md
ai-agents/: BALANCO_MENSAL_COMUNIDADE.md  README.md  RELATORIO_CONSTITUCIONAL.md  RELATORIO_INFRAESTRUTURA_ATIVA.md  SIMULACAO_MES_1_RESULTADOS.md  agente_etica.py  agents.py  auditor_ia.py  batch_processor.py  blockchain_interface.py  conselho_5.py  dev_assistant.py  equivalencia_etica.py  governanca_horizontal.py  ia_auditoria.py  integracao_completa.py  p2p_offline.py  simulacao_moral_money.py  sistema_cofre_reserva.py  sistema_integrado_final.py  sistema_reputacao_ativa.py  sistema_territorial.py  sistema_territorial_v1.0_realismo_caldas.py  test_error_agent.py  test_log_solution.py
ai_agents/: README_BLOCKCHAIN_AGENT.md  README_SDK_AGENTS.md  RELATORIO_CONSTITUCIONAL.md  VERSAO_1.0_REALISMO_CALDAS.md  blockchain_error_agent.py  blockchain_memory.py  claude-integration.py  dao_memory.json  dev_assistant.py  dev_memory.py  error_agent.py  event_queue.py  local_ledger.py  rust_error_patterns.py  simulacao_30_dias.py  sistema_financeiro.py  sistema_integridade_privacidade.py  start_sdk_agents.py  stress_test.py  sync_agents.py  sync_with_claude.py  test_blockchain_error_agent.py  test_dev_assistant.py  teste_lote1_simplificado.py  update_teach_fixed.py
ai_agents/integration/: claude_integration.py  sdk_dao_bridge.py  unified_agent.py
ai_agents/logs/: claude_interactions.json
ai_agents/sdk_agents/: alert_system.py  config.py  config.py.backup  documentation_manager.py  error_detector.py  errors_memory.json  keep_alive_manager.py  memory_manager.py
blockchain-core/: Cargo.toml  Makefile  RELATORIO_COMUNIDADE.md  build_log.txt  moral_money_state.json  rust-toolchain.toml
blockchain-core/.cargo/: config.toml
blockchain-core/.github/workflows/: build.yml
blockchain-core/node/: Cargo.toml  build.rs
blockchain-core/node/src/: chain_spec.rs  main.rs  service.rs
blockchain-core/pallets/governance/: Cargo.toml
blockchain-core/pallets/governance/src/: lib.rs
blockchain-core/pallets/processes/: Cargo.toml
blockchain-core/pallets/processes/src/: lib.rs
blockchain-core/pallets/projects/: Cargo.toml
blockchain-core/pallets/projects/src/: lib.rs
blockchain-core/pallets/reputation/: Cargo.toml
blockchain-core/pallets/reputation/src/: lib.rs
blockchain-core/runtime/: Cargo.toml  build.rs
blockchain-core/runtime/src/: lib.rs  lib.rs.backup
docs/: README.md  SYSTEM_OVERVIEW.md
docs/architecture/: moral_money_system_architecture.md
docs/internal/: UPDATES.md
docs/internal/error-tracker/: README.md  all-errors.md  branch-history.md  frequent-errors.md  lessons-learned.md  links.md  pre-commit-checklist.md  quick-reference.md  resolved.md
scripts/: parse-build-errors.sh
