[package]
name = "node"
version = "0.1.0"
authors = ["MMECO"]
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
futures = "0.3.30"
serde = { version = "1.0", features = ["derive"] }
jsonrpsee = { version = "0.24", features = ["server", "macros"] }
polkadot-sdk = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2503", features = ["node"] }

mmeco-runtime = { path = "../runtime" }
reputation = { path = "../pallets/reputation" }
pallet-projects = { path = "../pallets/projects" }
pallet-governance = { path = "../pallets/governance" }

[build-dependencies]
polkadot-sdk = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2503", features = ["node"] }
