[package]
name = "mmeco-node"
version = "0.1.0"
authors = ["Moral Money Team"]
edition = "2021"
publish = false

[dependencies]
# Ferramentas base
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.36", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
hex-literal = "0.4.1"

# O motor Polkadot SDK (v1.15.0 / Stable 2409)
polkadot-sdk = { workspace = true, features = ["node-api", "rpc-substrate", "sc-cli", "sc-service", "sc-executor", "sp-io"] }

# O teu Runtime
mmeco-runtime = { path = "../runtime" }

[build-dependencies]
polkadot-sdk = { workspace = true, features = ["node-api"] }
