[package]
name = "mmeco-runtime"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
# Destrancámos o cofre do Aura e do Grandpa nas 'features'
polkadot-sdk = { workspace = true, features = ["runtime", "pallet-aura", "pallet-grandpa", "pallet-balances", "pallet-timestamp", "pallet-transaction-payment"] }

# Codificação base (Sincronizado com o Workspace)
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }

# As tuas paletes personalizadas
pallet-reputation = { path = "../pallets/reputation", default-features = false }
pallet-projects = { path = "../pallets/projects", default-features = false }
pallet-governance = { path = "../pallets/governance", default-features = false }

[build-dependencies]
substrate-wasm-builder = { workspace = true }
substrate-build-script-utils = { workspace = true }

[features]
default = ["std"]
std = [
    "pallet-transaction-payment/std",
    "parity-scale-codec/std",
    "scale-info/std",
    "polkadot-sdk/std",
    "polkadot-sdk/pallet-balances",
    "pallet-reputation/std",
    "pallet-projects/std",
    "pallet-governance/std",
]
runtime-benchmarks = [
    "polkadot-sdk/runtime-benchmarks",
    "pallet-reputation/runtime-benchmarks",
]
try-runtime = [
    "polkadot-sdk/try-runtime",
    "pallet-reputation/try-runtime",
]

[dependencies.pallet-transaction-payment]
default-features = false
git = "https://github.com/paritytech/polkadot-sdk"
branch = "stable2412"
