[package]
name = "pallet-governance"
version = "0.1.0"
authors = ["Moral Money Team"]
edition = "2021"
publish = false

[dependencies]
# Aqui dizemos para ir buscar tudo ao "Chefe" (Workspace)
polkadot-sdk = { workspace = true, features = ["frame-support", "frame-system"] }
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }
serde = { workspace = true, optional = true }

[features]
default = ["std"]
std = [
    "polkadot-sdk/std",
    "parity-scale-codec/std",
    "scale-info/std",
    "serde/std",
]
