[package]
name = "pallet-projects"
version = "0.1.0"
edition = "2021"
authors = ["Moral Money Team"]
license = "MIT"

[dependencies]
frame-support = { version = "38.0.0", default-features = false }
frame-system = { version = "38.0.0", default-features = false }
sp-std = { version = "14.0.0", default-features = false }
sp-core = { version = "34.0.0", default-features = false }
sp-runtime = { version = "39.0.0", default-features = false }
sp-io = { version = "38.0.0", default-features = false }
scale-info = { version = "2.11.1", default-features = false, features = ["derive"] }
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false, features = ["derive"] }
pallet-reputation = { package = "reputation", path = "../reputation", default-features = false }
serde = { version = "1.0.210", optional = true }

[features]
default = ["std"]
std = [
    "frame-support/std",
    "frame-system/std",
    "sp-std/std",
    "sp-core/std",
    "sp-runtime/std",
    "sp-io/std",
    "scale-info/std",
    "codec/std",
    "serde",
    "pallet-reputation/std",
]
try-runtime = [
    "frame-support/try-runtime",
]
