[package]
name = "pallet-projects"
version = "0.1.0"
edition = "2021"
authors = ["Moral Money Team"]
license = "MIT"

[dependencies]
# Dependência principal do Polkadot SDK centralizada no workspace
polkadot-sdk = { workspace = true }
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false, features = ["derive"] }
scale-info = { version = "2.10.0", default-features = false, features = ["derive"] }

# Ligação à tua palete de reputação que acabámos de migrar!
pallet-reputation = { package = "reputation", path = "../reputation", default-features = false }

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "polkadot-sdk/std",
    "pallet-reputation/std",
]
try-runtime = [
    "polkadot-sdk/try-runtime",
]
