[package]
name = "reputation"
version = "0.1.0"
edition = "2021"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false, features = ["derive"] }
scale-info = { version = "2.10.0", default-features = false, features = ["derive"] }
polkadot-sdk = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2503", default-features = false, features = ["frame-support", "frame-system", "sp-runtime", "sp-std"] }

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "polkadot-sdk/std",
]
