[package]
name = "reputation"
version = "4.0.0-dev"
description = "Pallete de Reputação MMECO"
edition = "2021"

[dependencies]
# Vamos buscar o motor principal que configuraste no ficheiro mestre
polkadot-sdk = { workspace = true }
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false, features = ["derive"] }
scale-info = { version = "2.10.0", default-features = false, features = ["derive"] }

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "polkadot-sdk/std",
]
